--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "@pick-star/cli-mongodb": "^1.0.3",
     "ali-oss": "^6.10.0",
+    "axios": "^0.20.0",
     "egg": "^2.15.1",
+    "egg-cors": "^2.2.3",
+    "egg-mysql": "^3.0.0",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.11.0",
     "egg-socket.io": "^4.1.6",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
+    "js-base64": "^3.5.2",
     "simple-git": "^2.20.1",
     "user-home": "^2.0.0"
   },
